feat(dashboard): add statistics workspace
